--- a/custom-addons/hr_salary_increment/views/menu.xml
+++ b/custom-addons/hr_salary_increment/views/menu.xml
@@ -22,7 +22,20 @@
         parent="batch_salary_increment_menu"
         action="action_hr_salary_increment_batch"
         sequence="1" />
-    
+
+    <record id="hr_salary_increment_dashboard_action" model='ir.actions.client'>
+        <field name="name">Dashboard</field>
+        <field name='tag'>hr_salary_increment.employee_dashboard</field>
+    </record>
+
+
+    <!-- Dashboard menu -->
+    <menuitem id="menu_salary_increment_dashboard"
+        name="Dashboard"
+        parent="batch_salary_increment_menu"
+        action="hr_salary_increment_dashboard_action"
+        sequence="1" />
+
     <!-- <menuitem
         id="batch_salary_increment_list_menu_approve"
         name="Approve Salary Increment"
