--- a/custom-addons/hr_salary_increment/views/menu.xml
+++ b/custom-addons/hr_salary_increment/views/menu.xml
@@ -23,17 +23,21 @@
         action="action_hr_salary_increment_batch"
         sequence="1" />
 
-    <record id="hr_salary_increment_dashboard_action" model='ir.actions.client'>
-        <field name="name">Dashboard</field>
-        <field name='tag'>hr_salary_increment.employee_dashboard</field>
+    <record id="action_hr_salary_increment_batch_line_graph" model="ir.actions.act_window">
+        <field name="name">Employee Increment Lines</field>
+        <field name="res_model">hr.salary.increment.batch.line</field>
+        <field name="view_mode">graph,tree</field>
+        <field name="context">{'group_by': ['batch_id']}</field>
+        <field name="help">Use the search filters to select a specific batch and see the increments
+            per employee.</field>
     </record>
 
 
     <!-- Dashboard menu -->
     <menuitem id="menu_salary_increment_dashboard"
-        name="Dashboard"
+        name="Reporting"
         parent="batch_salary_increment_menu"
-        action="hr_salary_increment_dashboard_action"
+        action="action_hr_salary_increment_batch_line_graph"
         sequence="1" />
 
     <!-- <menuitem
