--- a/custom-addons/hr_medical_coverage/views/medical_coverage.xml
+++ b/custom-addons/hr_medical_coverage/views/medical_coverage.xml
@@ -13,20 +13,20 @@
                     <!-- HR Approval Buttons (Visible only in Submitted State) -->
                     <button name="actionHrApprove" type="object" string="HR Approve"
                         attrs="{'invisible': [('status', '!=', 'submitted')]}" class="btn-success"
-                        groups="hr_medical_coverage.group_hr_director"
+                        groups="user_group.group_hr_office"
                         confirm="Are you sure you want to process this?" />
                     <button name="actionHrReject" type="object" string="HR Reject"
                         attrs="{'invisible': [('status', '!=', 'submitted')]}" class="btn-danger"
-                        groups="hr_medical_coverage.group_hr_director"
+                        groups="user_group.group_hr_office"
                         confirm="Are you sure you want to process this?" />
                     <!-- Finance Approval Buttons (Visible only in HR Approved State) -->
                     <button name="actionFinanceApprove" type="object" string="Finance Approve"
                         attrs="{'invisible': [('status', '!=', 'hr_approved')]}" class="btn-success"
-                        groups="hr_medical_coverage.group_finance_officer"
+                        groups="user_group.group_finance_office"
                         confirm="Are you sure you want to process this?" />
                     <button name="actionFinanceReject" type="object" string="Finance Reject"
                         attrs="{'invisible': [('status', '!=', 'hr_approved')]}" class="btn-danger"
-                        groups="hr_medical_coverage.group_finance_officer"
+                        groups="user_group.group_finance_office"
                         confirm="Are you sure you want to process this?" />
 
                     <!-- Statusbar Widget for Tracking Approval Process -->
