--- a/custom-addons/authority_delegation/views/authority_delegation_menu.xml
+++ b/custom-addons/authority_delegation/views/authority_delegation_menu.xml
@@ -5,7 +5,7 @@
         id="authority_delegation_root_menu"
         name="Authority Delegation"
         sequence="10"
-        groups = "user_group.group_ceo,user_group.group_director,user_group.group_dceo,user_group.group_department_manager"
+        groups = "user_group.group_ceo,user_group.group_director,user_group.group_dceo,user_group.group_department_manager,user_group.group_employee"
     />
 
     <menuitem
@@ -14,6 +14,6 @@
         action="authority_delegation_action"
         parent="authority_delegation_root_menu"
         sequence="10"
-        groups = "user_group.group_ceo,user_group.group_director,user_group.group_dceo,user_group.group_department_manager"
+        groups = "user_group.group_ceo,user_group.group_director,user_group.group_dceo,user_group.group_department_manager,user_group.group_employee"
     />
 </odoo>
