--- a/custom-addons/authority_delegation/views/authority_delegation_view.xml
+++ b/custom-addons/authority_delegation/views/authority_delegation_view.xml
@@ -38,7 +38,7 @@
                         />
 
                         <button string="Reject Delegation" 
-                                name="action_reject_delegation" 
+                                name="action_refuse_delegation" 
                                 type="object" class="oe_highlight" 
                                 attrs="{'invisible':['|',('is_delegatee','=',False),('status','!=','submitted')]}"
                                 confirm="Are you sure you want to Reject this request?"
@@ -73,8 +73,8 @@
 
                     </group> 
                     <group> 
-                        <field name="delegator_id" readonly="1"/>
-                        <field name="delegatee_id" attrs="{'readonly':[('status','!=','draft')]}"/>
+                        <field name="delegator_id" readonly="1" options="{'no_open':True}"/>
+                        <field name="delegatee_id" attrs="{'readonly':[('status','!=','draft')]}" options="{'no_open':True, 'no_create':True}"/>
                         <field name="delegation_position" readonly="1"/>
                         <field name="delegation_start_date" attrs="{'readonly':[('status','!=','draft')]}" />
                         <field name="delegation_end_date" attrs="{'readonly':[('status','!=','draft')]}" />
